# vaultify

./: CMakeLists.txt  LICENSE  README
examples/: myText.txt
src/: main.cpp
src/vaultify/: types.hpp
src/vaultify/core/: processor.cpp  processor.hpp
src/vaultify/crypto/: aes_gcm.cpp  aes_gcm.hpp  primitives.cpp  primitives.hpp
src/vaultify/io/: binary_stream.cpp  binary_stream.hpp  file_header.cpp  file_header.hpp
src/vaultify/ui/: application.cpp  application.hpp
